--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "lodash": "^4.17.15",
+    "mongoose": "^5.9.19",
     "restify": "^8.5.1",
     "restify-router": "^0.5.1"
   }
